RestoreGame implementation and bugfixes. TUIListener modified to correctly handle the LeaderboardScreenState exit.